--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-core": "^5.6.15",
     "babel-eslint": "^3.1.20",
     "eslint": "^0.24.0",
+    "expect": "^1.13.0",
     "mocha": "^2.2.5",
     "sinon": "^1.17.1"
   }
