--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "name": "Gwilym Humphreys",
     "url": "https://github.com/gwilymhumphreys"
   },
-  "license": "",
+  "license": "MIT",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/founderlab/redux-request-middleware"
+  },
   "scripts": {
     "prepublish": "rm -rf ./lib && babel ./src --ignore '/node_modules/' --out-dir ./lib",
     "build": "rm -rf ./lib && babel ./src --ignore '/node_modules/' --out-dir ./lib",
