--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "test": "eval $(cat test/.env) mocha test/**/*.tests.js"
   },
   "dependencies": {
-    "babel-runtime": "^6.6.1",
     "lodash": "^4.0.0"
   },
   "devDependencies": {
-    "babel": "^5.8.34",
-    "babel-core": "^5.8.34",
-    "babel-eslint": "^3.1.20",
+    "babel-core": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "eslint": "^0.24.0",
     "expect": "^1.13.0",
     "mocha": "^2.2.5",
     "sinon": "^1.17.1"
+  },
+  "babel": {
+    "presets": ["es2015", "react", "stage-0"]
   }
 }
