--- a/package.json
+++ b/package.json
@@ -13,27 +13,32 @@
     "url": "https://github.com/founderlab/redux-request-middleware"
   },
   "scripts": {
-    "prepublish": "rm -rf ./lib && babel ./src --ignore '/node_modules/' --out-dir ./lib",
-    "build": "rm -rf ./lib && babel ./src --ignore '/node_modules/' --out-dir ./lib",
-    "watch": "rm -rf ./lib && babel ./src --ignore '/node_modules/' --watch --out-dir ./lib",
+    "prepublish": "npm run build",
+    "build": "rm -rf ./lib && ./node_modules/.bin/babel ./src --ignore '/node_modules/' --out-dir ./lib",
+    "watch": "rm -rf ./lib && ./node_modules/.bin/babel ./src --ignore '/node_modules/' --watch --out-dir ./lib",
     "test": "eval $(cat test/.env) mocha test/**/*.tests.js"
   },
   "dependencies": {
     "lodash": "^4.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-eslint": "^6.0.4",
-    "babel-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.9.0",
     "eslint": "^0.24.0",
     "expect": "^1.13.0",
     "mocha": "^2.2.5",
     "sinon": "^1.17.1"
   },
   "babel": {
-    "presets": ["es2015", "react", "stage-0"]
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
   }
 }
