--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.9.0",
-    "eslint": "^0.24.0",
+    "eslint": "^1.5.1",
+    "eslint-config-founderlab": "^0.1.0",
     "expect": "^1.13.0",
     "mocha": "^2.2.5",
     "sinon": "^1.17.1"
