--- a/package.json
+++ b/package.json
@@ -14,21 +14,16 @@
   },
   "scripts": {
     "prepublish": "npm run build",
-    "build": "rm -rf ./lib && ./node_modules/.bin/babel ./src --ignore '/node_modules/' --out-dir ./lib",
-    "watch": "rm -rf ./lib && ./node_modules/.bin/babel ./src --ignore '/node_modules/' --watch --out-dir ./lib",
+    "build": "rm -rf ./lib && babel ./src --ignore '/node_modules/' --out-dir ./lib",
+    "watch": "rm -rf ./lib && babel ./src --ignore '/node_modules/' --watch --out-dir ./lib",
     "test": "eval $(cat test/.env) mocha test/**/*.tests.js"
   },
   "dependencies": {
     "lodash": "^4.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.0",
+    "babel": "^5.8.38",
     "babel-eslint": "^6.0.4",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.9.0",
     "eslint": "^1.5.1",
     "eslint-config-founderlab": "^0.1.0",
     "expect": "^1.13.0",
